# Ai_Za_Sve

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
