#################################################
# Project metadata
#################################################

[project]
name = "aizasve"
version = "0.0.1"
description = "AI Agents"
authors = [
    { name = "Dejan Čugalj", email = "info@aizasve.pro" }
]
maintainers = [
   { name = "Dejan Čugalj", email = "info@aizasve.pro" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
package-mode = true

[tool.poetry.dependencies]
python = "^3.14"


[tool.poetry.group.dev.dependencies]
loguru = "^0.7.2"
pytest = "^8.3.3"
pre-commit = "^4.0.1"
ruff = "^0.7.0"


[project.urls]
Repository = "https://github.com/DeanChugall/Ai_Za_Sve"
Documentation = "https://aizasve.pro/docs"
Homepage = "https://aizasve.pro"

#################################################
# Ruff config
#################################################

[tool.ruff]

line-length = 160

# Enable Pyflakes `E` and `F` codes by default
lint.select = ["E", "F", "I001", "PT", "UP", "B", "SIM", "I", "C4"]
lint.ignore = ["E501", "F811", "SIM102"]
respect-gitignore = true

lint.per-file-ignores = {}

# Allow unused variables when underscore-prefixed
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Python 3.14
target-version = "py314"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10
max-complexity = 10

#################################################
# Pytest config
#################################################

[tool.pytest.ini_options]
minversion = "8.3.3"
addopts = "-s -p no:warnings"
python_files = [
    "tests.py",
    "test_*.py",
]
filterwarnings = [
    "ignore::DeprecationWarning:jupyter_client.connect",
]

#################################################
# Setuptools config (for editable installs)
#################################################
# Building package
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aizasve`*"]
